--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -86,18 +86,48 @@ title: "Розыгрыш конкурсов | Главная"
             <div class="places-box">
                 <div class="places-layout">
 
+<!--                    <div class="places-item" data-place="5">-->
+<!--                        <div data-c="false">-->
+<!--                            <div class="number"><span>5</span></div>-->
+<!--                            <img src="img/demo/face1.png">-->
+<!--                        </div>-->
+<!--                    </div>-->
+
                 </div>
-                <div class="js-more">еще</div>
+
+                <div class="places-more">
+                    <button type="button" class="l-btn l-btn-blue-dark l-btn-more js-more">Сделать ставку</button>
+                </div>
+
+
 
                 <div class="paginate">
-
+                    <div class="paginate-pages">
+                        <div class="paginate-pages-box">
+                            <button type="button" class="paginate-pages_prev disabled">Предедущая</button>
+                            <button type="button" class="paginate-pages_next">Следующая</button>
+                        </div>
+                        <div class="paginate-pages-num js-places-page">
+                            <div class="page-num active">1</div>
+                            <div class="page-num"><span>,</span>2</div>
+                            <div class="page-num"><span>,</span>3</div>
+                            <div class="page-num"><span>,</span>4</div>
+                            <div class="page-num"><span>,</span>5</div>
+                            <div class="page-num"><span>,</span>...</div>
+                            <div class="page-num"><span>,</span>32</div>
+                        </div>
+                    </div>
+                    <div class="paginate-count">
+                        <div class="paginate-count-text">Показывать по: </div>
+                        <div class="paginate-count-set">
+                            <button type="button" class="set-count js-count-s active" data-count="15">15</button>
+                            <button type="button" class="set-count js-count-s" data-count="30">30</button>
+                            <button type="button" class="set-count js-count-s" data-count="45">45</button>
+                        </div>
+                    </div>
                 </div>
-                <div class="places-count">
-                    <button class="js-count-s" data-count="15">15</button>
-                    <button class="js-count-s" data-count="30">30</button>
-                    <button class="js-count-s" data-count="45">45</button>
 
-                </div>
+
 
             </div>
         </div>
