--- a/src/scss/blocks/_paginate.scss
+++ b/src/scss/blocks/_paginate.scss
@@ -5,7 +5,6 @@
   &-pages {
     font-size: 18px;
     line-height: 21px;
-    text-decoration-line: underline;
     color: #526CB3;
     display: flex;
     align-items: center;
@@ -23,14 +22,16 @@
       border: none;
       background: no-repeat;
       color: #526CB3;
+      text-decoration-line: underline;
       transition: .3s;
-      &.disabled,
       &:hover {
-        color: #404040;
+        color: #BB9400;
       }
       &.disabled {
+        color: #404040;
         cursor: default;
       }
+
     }
     &-num {
       display: flex;
@@ -38,16 +39,17 @@
       .page-num {
         padding-right: 6px;
         cursor: pointer;
+        text-decoration-line: underline;
         span {
           color: #404040;
           padding-right: 6px;
         }
-        &.active,
-        &:hover {
-          color: #404040;
-        }
         &.active {
+          color: #404040;
           cursor: default;
+        }
+        &:hover {
+          color: #BB9400;
         }
       }
     }
@@ -73,12 +75,13 @@
         height: 30px;
         border: none;
         transition: .3s;
-        &.active,
         &:hover {
-          background: #526CB3;
-          color: #FFFFFF;
+          background: #FFD949;
+          color: #404040;
         }
         &.active {
+          background: #526CB3;
+          color: #FFFFFF;
           cursor: default;
         }
       }
