--- a/src/html/views/product.html
+++ b/src/html/views/product.html
@@ -72,10 +72,10 @@ title: "Розыгрыш конкурсов | Главная"
                 <div class="product-desc-icon cart-icon cart-icon_big timer"></div>
                 <div class="product-desc-info">
                     Осталось:
-                    <div class="product-timer-box">
-                        <div class="product-timer-item"><span>23</span> дня</div>
-                        <div class="product-timer-item"><span>14</span> ч.</div>
-                        <div class="product-timer-item"><span>54</span> мин.</div>
+                    <div class="product-timer-box js-product-time" data-countdown="Sep 30, 2020 00:00:00">
+                        <div class="product-timer-item"><span id="days"></span> дня</div>
+                        <div class="product-timer-item"><span id="hours"></span> ч.</div>
+                        <div class="product-timer-item"><span id="minutes"></span> мин.</div>
                     </div>
                 </div>
             </div>
