--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -10,15 +10,15 @@ title: "Розыгрыш конкурсов | Главная"
         </div>
         <ul>
             <li>
-                <a href="home.html">Главная</a>
+                <a href="1-home.html">Главная</a>
                 <ul>
                     <li class="child">
-                        <a href="#">Главная с модальным окном (Выиграть за репост!)</a>
+                        <a href="1-1-home-win-repost.html">Главная с модальным окном (Выиграть за репост!)</a>
                     </li>
                 </ul>
             </li>
             <li>
-                <a href="product.html">Страница товара</a>
+                <a href="2-product.html">Страница товара</a>
             </li>
         </ul>
     </div>
