--- a/src/scss/blocks/_buttons.scss
+++ b/src/scss/blocks/_buttons.scss
@@ -101,7 +101,11 @@
       background: $color-primary1;
     }
   }
+
 }
 button:focus{
   outline: none;
+}
+[disabled="disabled"]{
+  opacity: .2;
 }
