--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -17,6 +17,7 @@
 @import "blocks/catalogs";
 @import "blocks/paginate";
 @import "blocks/product";
+@import "blocks/modal";
 
 //Слои
 @import "layers/header";
