--- a/src/html/views/1-1-home-win-repost.html
+++ b/src/html/views/1-1-home-win-repost.html
@@ -751,6 +751,10 @@ title: "Розыгрыш конкурсов | Главная"
         </div>
     </section>
 
+
+<!--    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#winForRepost">-->
+<!--        Launch demo modal-->
+<!--    </button>-->
     <div class="modal l-modal l-modal_t1 fade" id="winForRepost" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered" role="document">
             <div class="modal-content">
