--- a/src/html/includes/components/footer-product.html
+++ b/src/html/includes/components/footer-product.html
@@ -73,7 +73,7 @@
                 isBusy = true
             }
             $('.places-layout').append('<div class="places-item" data-place="'+i+'">' +
-                '<div data-c="'+isBusy+'"><div class="number"><span>'+i+'</span></div>' +
+                '<div class="place" data-c="'+isBusy+'"><div class="number"><span>'+i+'</span></div>' +
                 '<img src="img/demo/face1.png" /></div></div>');
         }
     </script>
