--- a/src/scss/blocks/_modal.scss
+++ b/src/scss/blocks/_modal.scss
@@ -24,6 +24,9 @@
       color: #526CB3;
       width: 100%;
       transition: .3s;
+      @media (min-width: 768px) {
+        padding-left: 40px;
+      }
       @media (max-width: 768px) {
         font-size: 22px;
       }
@@ -111,7 +114,70 @@
 
   }
 
+  .info-bet {
+    padding: 0 146px;
+    margin-bottom: 15px;
+    transition: .3s;
 
+    &-box {
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-bottom: 1px solid #E8EBF3;
+      margin-bottom: 10px;
+      padding-bottom: 10px;
+      &:last-child {
+        border-bottom: 0;
+      }
+      &_label {
+        font-size: 18px;
+        line-height: 34px;
+        color: #404040;
+      }
+      &_val {
+        font-weight: 500;
+        font-size: 24px;
+        line-height: 34px;
+        color: #404040;
+      }
+    }
+    &-input {
+      input {
+        width: 100%;
+        height: 48px;
+        max-width: 72px;
+        background: #DDE7FF;
+        border-radius: 5px;
+        &::-webkit-outer-spin-button,
+        &::-webkit-inner-spin-button {
+          -webkit-appearance: none;
+          margin: 0;
+        }
+      }
+    }
+    .l-check {
+      margin-top: 20px;
+    }
+    &-btn {
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+      transition: .3s;
+      .l-btn-red {
+        min-width: 128px;
+        margin-right: 12px;
+      }
+      .l-btn-green {
+        min-width: 206px;
+      }
+    }
+    @media (max-width: 986px) {
+      padding: 0 72px;
+    }
+    @media (max-width: 768px) {
+      padding: 0 10px;
+    }
+  }
 
 }
 .modal-backdrop {
