modal -wins- in product

--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -19,6 +19,11 @@ title: "Розыгрыш конкурсов | Главная"
             </li>
             <li>
                 <a href="2-product.html">Страница товара</a>
+                <ul>
+                    <li class="child">
+                        <a href="2-1-product-wins.html">Страница товара с модальным окном (Победа)</a>
+                    </li>
+                </ul>
             </li>
         </ul>
     </div>
