--- a/src/html/views/1-1-home-win-repost.html
+++ b/src/html/views/1-1-home-win-repost.html
@@ -792,4 +792,4 @@ title: "Розыгрыш конкурсов | Главная"
     </div>
 
 </main>
-<%= _.template(require('./../includes/footer.html').default)(data) %>
+<%= _.template(require('./../includes/components/footer-home-modal.html').default)(data) %>
