--- a/src/scss/blocks/forms/_input.scss
+++ b/src/scss/blocks/forms/_input.scss
@@ -6,3 +6,12 @@
   border: 0;
   padding-left: 10px;
 }
+.l-textarea {
+  background: #DDE7FF;
+  border-radius: 3px;
+  border: 0;
+  resize:none;
+  padding: 20px;
+  outline: none;
+  transition: .3s;
+}
