fix header responsive

--- a/src/scss/blocks/forms/_select.scss
+++ b/src/scss/blocks/forms/_select.scss
@@ -37,6 +37,7 @@
   cursor: pointer;
   max-height: 48px;
   overflow: hidden;
+  transition: .3s;
   &:before {
     content: '';
     position: absolute;
