--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -25,6 +25,9 @@ title: "Розыгрыш конкурсов | Главная"
                     </li>
                 </ul>
             </li>
+            <li>
+                <a href="3-to-begin.html">Страница "Начать"</a>
+            </li>
         </ul>
     </div>
 
