--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,8 @@
 @import "blocks/paginate";
 @import "blocks/product";
 @import "blocks/modal";
+@import "blocks/begin";
+@import "blocks/wins";
 
 //Слои
 @import "layers/header";
