--- a/src/html/views/3-to-begin.html
+++ b/src/html/views/3-to-begin.html
@@ -257,17 +257,15 @@ title: "Розыгрыш конкурсов | Главная"
 
                     </div>
                 </div>
-                <div class="slider-nav">
-                    <div class="slider-arr">
+
+                <div class="slider-nav slider-nav_ab">
+                    <div class="slider-arr left">
                         <div class="prev"></div>
                     </div>
-
-                  fg
                     <div class="slider-arr right">
                         <div class="next"></div>
                     </div>
                 </div>
-
 
             </div>
         </div>
