--- a/src/scss/blocks/_begin.scss
+++ b/src/scss/blocks/_begin.scss
@@ -152,6 +152,16 @@
       &-item {
         max-width: 100%;
       }
+      &-title {
+        font-size: 24px;
+        padding-top: 0;
+        padding-bottom: 0;
+      }
+      &-desc {
+        font-size: 16px;
+        line-height: 22px;
+        padding-bottom: 0;
+      }
     }
   }
   &-btn {
@@ -210,7 +220,7 @@
     @media (max-width: 768px) {
       display: block;
       padding-top: 30px;
-      padding-bottom: 35px;
+      padding-bottom: 20px;
     }
   }
 
