--- a/src/html/views/2-1-product-wins.html
+++ b/src/html/views/2-1-product-wins.html
@@ -1,5 +1,5 @@
 <% var data = {
-title: "Розыгрыш конкурсов | Главная"
+title: "Розыгрыш конкурсов | Продукт"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
