--- a/src/html/views/3-to-begin.html
+++ b/src/html/views/3-to-begin.html
@@ -1,5 +1,5 @@
 <% var data = {
-title: "Розыгрыш конкурсов | Главная"
+title: "Розыгрыш конкурсов | Начать"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
