--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -28,6 +28,9 @@ title: "Розыгрыш конкурсов | Главная"
             <li>
                 <a href="3-to-begin.html">Страница "Начать"</a>
             </li>
+            <li>
+                <a href="4-page.html">Страница</a>
+            </li>
         </ul>
     </div>
 
