--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,8 @@
 @import "blocks/modal";
 @import "blocks/begin";
 @import "blocks/wins";
+@import "pages/info";
+@import "blocks/articles";
 
 //Слои
 @import "layers/header";
