--- a/src/html/views/index.html
+++ b/src/html/views/index.html
@@ -29,7 +29,27 @@ title: "Розыгрыш конкурсов | Главная"
                 <a href="3-to-begin.html">Страница "Начать"</a>
             </li>
             <li>
-                <a href="4-page.html">Страница</a>
+                <a href="4-page.html">Страница "Отзывы победителей"</a>
+            </li>
+            <li>
+                <a href="5-page.html">Страница "Доставка"</a>
+            </li>
+            <li>
+                <a href="6-page.html">Страница "Часто задаваемые вопросы"</a>
+            </li>
+            <li>
+                <a href="7-page.html">Страница "Помощь"</a>
+            </li>
+
+
+
+            <li>
+                <a href="9-page.html">ЛК | Мои аукционы</a>
+<!--                <ul>-->
+<!--                    <li class="child">-->
+<!--                        <a href="1-1-home-win-repost.html">Главная с модальным окном (Выиграть за репост!)</a>-->
+<!--                    </li>-->
+<!--                </ul>-->
             </li>
         </ul>
     </div>
