--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -22,6 +22,8 @@
 @import "blocks/wins";
 @import "pages/info";
 @import "blocks/articles";
+@import "blocks/question";
+@import "blocks/forms/upload";
 
 //Слои
 @import "layers/header";
