--- a/src/html/includes/footer.html
+++ b/src/html/includes/footer.html
@@ -1,4 +1,4 @@
-    <footer>
+    <footer class="l-hide">
         <div class="footer-layout box">
             <div class="footer-box">
                 <div class="footer-title">Розыгрыш конкурсов</div>
