--- a/src/html/views/4-page.html
+++ b/src/html/views/4-page.html
@@ -1,5 +1,5 @@
 <% var data = {
-title: "Розыгрыш конкурсов | Записи"
+title: "Розыгрыш конкурсов | Отзывы победителей"
 }; %>
 <%= _.template(require('./../includes/header.html').default)(data) %>
 <main role="main">
