--- a/src/scss/blocks/forms/_input.scss
+++ b/src/scss/blocks/forms/_input.scss
@@ -5,6 +5,25 @@
   outline: none;
   border: 0;
   padding-left: 10px;
+  &_l1 {
+    background: #DDE7FF;
+    padding: 13px 12px;
+    width: 100%;
+  }
+  &-place_l1 {
+    &::-webkit-input-placeholder {
+      color: #A3A3A3;
+    }
+    &::-moz-placeholder {
+      color: #A3A3A3;
+    }
+    &:-ms-input-placeholder {
+      color: #A3A3A3;
+    }
+    &:-moz-placeholder {
+      color: #A3A3A3;
+    }
+  }
 }
 .l-textarea {
   background: #DDE7FF;
@@ -14,4 +33,9 @@
   padding: 20px;
   outline: none;
   transition: .3s;
+  &_l1 {
+    font-size: 18px;
+    line-height: 21px;
+    width: 100%;
+  }
 }
