--- a/src/html/includes/header.html
+++ b/src/html/includes/header.html
@@ -10,7 +10,7 @@
     <title><%=title%></title>
 </head>
 <body class="drawer drawer--right">
-<header class="l-hide">
+<header>
     <div class="header-box">
         <div class="box">
             <div class="header-layout">
